<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/socialUserDogListItemContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:id="@+id/socialUserDogListLinearContainer"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/socialUserDogListItemCardView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <ImageView
                        android:id="@+id/socialUserDogImage"
                        android:layout_width="145dp"
                        android:layout_height="150dp"
                        android:contentDescription="TODO"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/userimage" />

                    <TextView
                        android:id="@+id/socialUserListName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="40dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/puppuy_name"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/socialUserDogImage"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/socialMeetupListDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="19dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/social_user_request_text"
                        app:layout_constraintStart_toEndOf="@+id/socialUserDogImage"
                        app:layout_constraintTop_toBottomOf="@+id/socialUserListName" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/completeButton"
                        android:layout_width="85dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="19dp"
                        android:layout_marginTop="13dp"
                        android:background="@drawable/social_rounded_button_purple"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/social_user_view_profile"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/socialUserDogImage"
                        app:layout_constraintTop_toBottomOf="@+id/socialMeetupListDescription"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>